--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-ee",
+  "name": "enterprise-edition",
   "version": "0.0.1",
   "description": "JavaScript Enterprise Edition",
   "main": "index.js",
